[package]
name = "carinae"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = { version = "1.0", features = ["std"] }
tokio = { version = "1", features = ["full"] }
poem = { version = "1.3", features = [] }
indoc = "1.0"
tokio-stream = "0.1.8"
tokio-util = "0.7.0"
futures = "0.3"
async-compression = { version = "0.3.12", features = ["tokio", "zstd"] }

[build-dependencies]
cxx-build = "1.0"
