[package]
name = "carinae"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = { version = "1", features = ["std"] }
tokio = { version = "1", features = ["full"] }
poem = { version = "1", features = ["compression"] }
indoc = "1"
tokio-stream = "*"
tokio-util = "*"
futures = "*"
async-compression = { version = "*", features = ["tokio", "zstd"] }
argh = "*"

[build-dependencies]
cxx-build = "1"
